pbs_project/lbc-basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
      - name: aws-load-balancer-controller
        image: public.ecr.aws/eks/aws-load-balancer-controller:v2.11.0
        args:
        - --cluster-name=pbs-project-dev-cluster
        - --ingress-class=alb
        - --aws-region=ap-northeast-2
        - --aws-vpc-id=vpc-0deae1742e10e4fef
