pbs_project/istio_resources.yaml
# [1] Istio Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pbs-gateway
  namespace: istio-system  # 보통 istio-system에 둡니다
spec:
  selector:
    istio: ingress # [중요] 기본 Istio 인그레스 컨트롤러를 바라봄
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
# [2] VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pbs-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/pbs-gateway
  http:
  # 1. /api로 시작하는 요청은 백엔드(데이터)로 보낸다
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: pbs-app-service
        port:
          number: 80
  # 2. 나머지 모든(/) 요청은 웹사이트(화면)로 보낸다
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: pbs-web-service
        port:
          number: 80
